@@ -50,9 +50,8 @@ public class ItemServiceImpl implements ItemService {
         List<ItemRequestDto> requests = itemRequestService.getAllItemRequests();
 
         for (ItemRequestDto itemRequestDto : requests) {
-
             if (itemRequestDto.getDescription().equalsIgnoreCase(itemDto.getName())) {
-                itemDto.setRequest(itemRequestDto.getId());
+                itemDto.setRequestId(itemRequestDto.getId());
             }
         }
 
@@ -137,7 +136,7 @@ public class ItemServiceImpl implements ItemService {
         }
 
         if (StringUtils.isBlank(newItem.getName())) {
-            newItem.setRequest(item.getRequest());
+            newItem.setRequestId(item.getRequestId());
         }
 
         if (!Objects.equals(newItem.getOwner(), ownerId)) {
@@ -167,9 +166,8 @@ public class ItemServiceImpl implements ItemService {
     }
 
     private void checkItemParameters(ItemDto itemDto) {
-        if (Objects.isNull(itemDto.getAvailable()) || Objects.isNull(itemDto.getDescription())
-                || Objects.isNull(itemDto.getName()) || itemDto.getDescription().isBlank()
-                || itemDto.getName().isBlank()) {
+        if (Objects.isNull(itemDto.getAvailable()) || StringUtils.isBlank(itemDto.getDescription())
+                || StringUtils.isBlank(itemDto.getName())) {
             throw new InvalidItemParametersException("Поля Available, Description и Name не могут быть пустыми.");
         }
     }
@@ -205,7 +203,7 @@ public class ItemServiceImpl implements ItemService {
         commentDto.setItemId(itemId);
         commentDto.setCreated(LocalDateTime.now());
         Comment comment = ItemMapper.toComment(commentDto);
-        commentRepository.save(comment);
+        comment = commentRepository.save(comment);
 
         return ItemMapper.toCommentDto(comment, userRepository);
     }
